--- a/template/page-template/card-style.css
+++ b/template/page-template/card-style.css
@@ -4,12 +4,14 @@
   box-shadow: 1px 1px 2px #b6b6b694;
   border-radius: 10px;
   position: relative;
+  background-color: #ffffff;
 }
 
 .card-image {
   width: 300px;
   height: 200px;
   object-fit: cover;
+  border-radius: 10px 10px 0px 0px;
 }
 
 .card-infos {
